# apps/api/src/gen/kubb/zod/postV1WorkSessionsStartSchema.ts
@@ -1,0 +1,54 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+import { z } from "zod";
+
+/**
+ * @description Default Response
+ */
+export const postV1WorkSessionsStart200Schema = z.object({
+    "success": z.literal(true),
+"message": z.string().optional(),
+"data": z.object({
+    "workSessionId": z.string()
+    }),
+"pagination": z.object({
+    "total": z.number(),
+"page": z.number(),
+"perPage": z.number(),
+"totalPages": z.number()
+    }).optional()
+    })
+
+/**
+ * @description Default Response
+ */
+export const postV1WorkSessionsStart401Schema = z.object({
+    "success": z.boolean(),
+"message": z.string()
+    })
+
+/**
+ * @description Default Response
+ */
+export const postV1WorkSessionsStart404Schema = z.object({
+    "success": z.boolean(),
+"message": z.string()
+    })
+
+/**
+ * @description Default Response
+ */
+export const postV1WorkSessionsStart500Schema = z.object({
+    "success": z.boolean(),
+"message": z.string()
+    })
+
+export const postV1WorkSessionsStartMutationRequestSchema = z.object({
+    "challengeId": z.string(),
+"classroomId": z.string().optional()
+    })
+
+export const postV1WorkSessionsStartMutationResponseSchema = z.lazy(() => postV1WorkSessionsStart200Schema)
