# packages/types/kubb/PostV1WorkSessionsStart.ts
@@ -1,0 +1,116 @@
+/**
+* Generated by Kubb (https://kubb.dev/).
+* Do not edit manually.
+*/
+
+
+export const postV1WorkSessionsStart200SuccessEnum = {
+    "true": true
+} as const;
+
+export type PostV1WorkSessionsStart200SuccessEnum = (typeof postV1WorkSessionsStart200SuccessEnum)[keyof typeof postV1WorkSessionsStart200SuccessEnum];
+
+/**
+ * @description Default Response
+*/
+export type PostV1WorkSessionsStart200 = {
+    /**
+     * @type boolean
+    */
+    success: PostV1WorkSessionsStart200SuccessEnum;
+    /**
+     * @type string | undefined
+    */
+    message?: string;
+    /**
+     * @type object
+    */
+    data: {
+        /**
+         * @type string
+        */
+        workSessionId: string;
+    };
+    /**
+     * @type object | undefined
+    */
+    pagination?: {
+        /**
+         * @type number
+        */
+        total: number;
+        /**
+         * @type number
+        */
+        page: number;
+        /**
+         * @type number
+        */
+        perPage: number;
+        /**
+         * @type number
+        */
+        totalPages: number;
+    };
+};
+
+/**
+ * @description Default Response
+*/
+export type PostV1WorkSessionsStart401 = {
+    /**
+     * @type boolean
+    */
+    success: boolean;
+    /**
+     * @type string
+    */
+    message: string;
+};
+
+/**
+ * @description Default Response
+*/
+export type PostV1WorkSessionsStart404 = {
+    /**
+     * @type boolean
+    */
+    success: boolean;
+    /**
+     * @type string
+    */
+    message: string;
+};
+
+/**
+ * @description Default Response
+*/
+export type PostV1WorkSessionsStart500 = {
+    /**
+     * @type boolean
+    */
+    success: boolean;
+    /**
+     * @type string
+    */
+    message: string;
+};
+
+export type PostV1WorkSessionsStartMutationRequest = {
+    /**
+     * @type string
+    */
+    challengeId: string;
+    /**
+     * @type string | undefined
+    */
+    classroomId?: string;
+};
+
+export type PostV1WorkSessionsStartMutationResponse = PostV1WorkSessionsStart200;
+
+export type PostV1WorkSessionsStartMutation = {
+    Response: PostV1WorkSessionsStart200;
+    Request: PostV1WorkSessionsStartMutationRequest;
+    Errors: PostV1WorkSessionsStart401 | PostV1WorkSessionsStart404 | PostV1WorkSessionsStart500;
+};
